--- a/css/index.css
+++ b/css/index.css
@@ -14,28 +14,29 @@ ul li{
 hr {
 	margin-top: 10px !important;
 }
-a:link{
+a:link .faq-links{
     text-decoration: none !important; 
-    color: white !important;
+    color: #888888 !important;
 }
-a:visited {
+a:visited .faq-links {
 	text-decoration: none !important; 
-    color: white !important;
+    color: #888888 !important;
 }
-a:hover {
+a:hover .faq-links{
 	color: #55afef !important;
 }
-a:active {
+a:active .faq-links{
 	text-decoration: none !important; 
     color: white !important;
 }
+
 .footer-titles{
 	color: #55afef ;
 }
 .project-tagline {
 	color: red;
 }
-#mainPhoto, #familyPhoto, #contactUsPhoto{
+#mainPhoto, #mainPhotoXs, #faqPhoto, #familyPhoto, #contactUsPhoto{
 	max-width: 100%;
 	
 }
@@ -76,4 +77,28 @@ footer {
     bottom: 0;
     height: 0px;
     width: 100%;
+}
+
+/*CSS for FAQ section*/
+.faq-divs {
+	padding: 5px;
+}
+.faq-glyphicon {
+	color: #55afef !important;
+}
+.faq-glyphicon-open{
+	color: white !important;
+}
+.toggle-box{
+	display: none;
+	/*box-shadow: 5px 5px 2.5px #888888;*/
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+.open {
+	background-color: #55afef !important;
+	color: white !important;
+}
+.faq-links div{
+	margin-bottom: 0px !important;
+	border: 0px;
 }
