--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,40 @@ footer {
 	border-width: 5px;
 
 }
+
+	#couponsDiv {
+		height: 700px;
+	}
+	.carousel-img{
+		height: 400px;
+	}
+@media screen and (min-width: 368px){
+	#couponsDiv {
+		height: 650px;
+	}
+
+}
+@media screen and (min-width: 736px){
+	#couponsDiv {
+		height: 460px;
+	}
+
+}
+@media screen and (min-width: 768px){
+	#couponsDiv {
+		height: 500px;
+	}
+
+}
+@media screen and (min-width: 992px){
+	#couponsDiv {
+		height: 360px;
+	}
+	.coupons {
+		min-height: 225px !important;
+
+}
+}
 #couponBody{
 }
 /*CSS for pricing section*/
