Had to change for iPhone support
the business name font had to change in order to support iPhone

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ nav {
 	color: white !important;
 }
 #businessName {	
-    font-family: Brush Script MT;
+    font-family: GillSans-Italic;
     float: left;
     color: white;
     margin-top: 15px;
