--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,9 @@
 	color: white;
     background: #0054ab
 }
-
+.bold {
+	font-weight: bold;
+}
 nav {
 	margin-bottom: 0px;
 	width: 100%;
@@ -21,6 +23,9 @@ nav {
 }
 	.navbar-brand {
 		padding-top: 5px !important;
+	}
+	.homeSubText {
+		font-size: 15px;
 	}
 }
 @media screen and (min-width: 660px) and (max-width: 830px){
