--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,56 @@ nav {
 .white{
 	color: white !important;
 }
+.parallax {
+    /* The image used */
+    background-image: url("img_parallax.jpg");
+
+    /* Set a specific height */
+    min-height: 1100px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/*HOME CSS*/
+
 @media screen and (max-width: 660px) {
+	.subpics {
+		min-height: 150px;
+	}
+	#scrollDownBtn {
+		display: none;
+	}
+	#mainPicture {
+		    position: relative;
+    background-position: center;
+    background-position-y: 0px;
+
+
+		background-image: url("../images/main-pic-2.png");
+		height: 300px;
+		width: 100%;
+		background-repeat: no-repeat;
+
+			}
+			#parallax-1, #parallax-2{
+		opacity: .5;
+	background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+	}
+	#parallax-1 {
+		background-image: url("../images/main-pic-4.jpg");
+		min-height: 400px;
+	}
+	#parallax-2 {
+		background-image: url("../images/FullSizeRender.jpg");
+		min-height: 600px;
+		background-position: 38% 15%;
+	}
 	#businessName {	
     font-family: GillSans-Italic;
     float: left;
@@ -27,8 +76,21 @@ nav {
 	.homeSubText {
 		font-size: 15px;
 	}
+	.parallaxCaption {
+	border-radius: 10px;
+    background-color: #0054a6;
+    position: relative;
+    
+    font-size: 40px;
+    text-align: center;
+    color: white;
+    text-shadow: 1px 5px rgb(41, 41, 41);
+}
 }
 @media screen and (min-width: 660px) and (max-width: 830px){
+	.subpics {
+		min-height: 150px;
+	}
 		#businessName {	
     font-family: GillSans-Italic;
     float: left;
@@ -36,11 +98,81 @@ nav {
     margin-top: 10px;
     font-size: 25px;
 }
+#parallax-1, #parallax-2{
+		opacity: .5;
+	background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+	}
+	#parallax-1 {
+		background-image: url("../images/main-pic-4.jpg");
+		min-height: 400px;
+	}
+	#parallax-2 {
+		background-image: url("../images/FullSizeRender.jpg");
+		min-height: 600px;
+		background-position: 50% 15%;
+	}
 	.navbar-brand {
 		padding-top: 5px !important;
 	}
+	.parallaxCaption {
+	border-radius: 10px;
+    background-color: #0054a6;
+    position: relative;
+    
+    font-size: 55px;
+    color: white;
+    text-shadow: 1px 5px rgb(41, 41, 41);
+}
 	}
 @media screen and (min-width: 830px) {
+	.subpics {
+		height: 280px !important;
+		width: 100%
+	}
+	#scrollDownBtn {
+	border-radius: 40px;
+	border: 2px solid #e0e0e0;
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	z-index: 1;
+	top: 575px;
+	font-size: 50px;
+	left: 48%;
+	color: #55E;
+}
+	#mainPicture {
+		height: 100vh;
+		background-image: url("../images/main-pic1.png");
+		background-repeat: no-repeat;
+		/* Set a specific height */
+    min-height: 500px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+	}
+	#parallax-1, #parallax-2{
+		opacity: .5;
+	background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+	}
+	#parallax-1 {
+		background-image: url("../images/main-pic-4.jpg");
+		min-height: 400px;
+	}
+	#parallax-2 {
+		background-image: url("../images/FullSizeRender.jpg");
+		min-height: 600px;
+		background-position: 50% 15%;
+	}
 	#businessName {	
     font-family: brush script MT;
     float: left;
@@ -48,7 +180,23 @@ nav {
     margin-top: 15px;
     font-size: 30px;
 }
+.parallaxCaption {
+	border-radius: 10px;
+    background-color: #0054a6;
+    position: relative;
+    
+    font-size: 55px;
+    color: white;
+    text-shadow: 1px 5px rgb(41, 41, 41);
 }
+}
+.staticFont {
+	font-size: 16px;
+}
+.parrallaxContainer{
+	background-color: black;
+}
+
 
 ul {
 	list-style-type:none;
@@ -154,13 +302,11 @@ footer {
 	#couponsDiv {
 		height: 460px;
 	}
-
 }
 @media screen and (min-width: 768px){
 	#couponsDiv {
 		height: 500px;
 	}
-
 }
 @media screen and (min-width: 992px){
 	#couponsDiv {
@@ -168,17 +314,54 @@ footer {
 	}
 	.coupons {
 		min-height: 225px !important;
-
 }
+}
+@media screen and (max-width: 660px) {
+	.headerPhotos {
+		opacity: .5;
+		width: 100%;
+		height: 110px;
+	}
+}
+.headerPhotos {
+	opacity: .4;
+	width: 100%;
+}
+.imageBackground {
+	background-color: black;
 }
 #couponBody{
 }
 /*CSS for how it works*/
-#howItWorksTitle {
+@media screen and (max-width: 660px) {
+	.pricingHeaders {
+    position: relative;
+    top: -85px;
+    color: white;
 	border: none;
-	float: none;
-	text-align: center;
+	display: block;
+    margin: 20px auto;
+    width: 100%;
 }
+	.subContainer {
+		position: relative;
+		top: -75px;
+	}
+}
+@media screen and (min-width: 830px) {
+	.pricingHeaders {
+    position: absolute;
+    top: 110px;
+    color: white;
+	border: none;
+	display: block;
+    margin: 15px auto;
+    width: 30%;
+    text-align: left;
+    margin-left: 30px;
+}
+}
+
 .servicesContainer{
 	width: 100%;
 	float: left;
@@ -199,7 +382,7 @@ footer {
 	.pricingHeaders {
 	font-size: 40px;
 	float: left;
-    border-top: 2px solid #e0e0e0;
+    /*border-top: 2px solid #e0e0e0;*/
 }
 	.stepTitle{
 	font-size: 40px;
@@ -231,7 +414,7 @@ footer {
 	.pricingHeaders {
 	font-size: 40px;
 	float: left;
-    border-top: 2px solid #e0e0e0;
+    /*border-top: 2px solid #e0e0e0;*/
 }
 	.stepTitle{
 	font-size: 40px;
@@ -262,9 +445,10 @@ footer {
 	float: left;
 }
 	.stepTitle{
-	font-size: 65px;
+	font-size: 45px;
 	float: left;
 	margin-right: 8px;
+	margin-top: 23px;
 }
 	.stepDetails {
 	border: 2px solid #e0e0e0;
@@ -311,7 +495,7 @@ footer {
 .selected-text {
 	color: white !important;
 }
-#pricingContainer, #summaryContainer, #guranteeContainer, #contactInfoContainer{
+#pricingContainer, #summaryContainer, #guranteeContainer, #contactInfoContainer, .top3Container, .aboutUsContainer{
 	border: 2px solid #e0e0e0;
 	box-shadow: 0px 1px 0px 1px #888888;
 	margin : 10px 0px;
@@ -324,7 +508,6 @@ footer {
 	height: 320px;
 }
 .servicesDiv ul li:before {
-	content: ">"; /* Insert content that looks like bullets */
  	padding-right: 4px;
     color: #0595cc; /* Or a color you prefer */
 
