--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ nav {
 		min-height: 400px;
 	}
 	#parallax-2 {
-		background-image: url("../images/rsz_aboutus.jpg");
+		background-image: url("../images/rsz_aboutus1.jpg");
 		min-height: 600px;
 		background-position: center;
 	}
