--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ nav {
 	margin-bottom: 0px;
 	width: 100%;
 }
+
 .white{
 	color: white !important;
 }
@@ -87,6 +88,13 @@ nav {
     color: white;
     text-shadow: 1px 5px rgb(41, 41, 41);
 }
+#fb-button-div {
+		float: right;
+    /* text-align: center; */
+    display: block;
+    width: 78%;
+    margin: 0px auto;
+	}
 }
 @media screen and (min-width: 660px) and (max-width: 830px){
 	#mainPicture {
@@ -144,6 +152,9 @@ nav {
 }
 	}
 @media screen and (min-width: 830px) {
+	#fb-button-div {
+		display:block; width:20%; margin:0px auto;
+	}
 	.subpics {
 		height: 280px !important;
 		width: 100%
